# EMTG

./: .gitignore  CMakeLists.txt  README.md  README.opensource
emtg/: .gitignore  CMakeLists.txt  Doxyfile  EMTG-Config-template.cmake  PyEMTG.sln  compile_boost.py
emtg/OptionsOverhaul/: list_of_journeyoptions.csv  list_of_missionoptions.csv  test_missionoptions.py
emtg/PyEMTG/: Archive.py  ArchivePanel.py  AstroFunctions.py  Body.py  BodyPicker.py  BubbleOptions.py  EOM.py  GlobalOptionsPanel.py  Journey.py  JourneyOptions.py  JourneyOptionsV1.py  Mission.py  MissionEvent.py  MissionOptions.py  MissionOptionsV1.py  MissionPanel.py  NSGAIIFilter.py  NSGAIIpanel.py  OptionsNotebook.py  OutputOptionsPanel.py  PhysicsOptionsPanel.py  PlotOptions.py  PyEMTG-template.options  PyEMTG.py  PyEMTG.pyproj  PyEMTG_interface.py  PyMissionOptions.h  SmallBodyList.py  SolverOptionsPanel.py  StateConverter.py  ThrottleTable.py  Universe.py  UniverseNotebook.py  auto_boost_python.py  clusterize.py  default.emtg_universe  default.emtgopt  kepler.py  mathUtilities.py  test_PyMissionOptions.py
emtg/PyEMTG/ConvergenceAnimator/: Xrow.py
emtg/PyEMTG/Converters/: Convert_TwoPointShootingLowThrust_to_PSFB.py  Convert_emtgopt_v1_to_v2.py  convert_old_PeriapseLaunchOrImpulsiveDeparture_to_PeriapseLaunch.py  convert_to_single_phase_journeys.py  rephase_to_discrete_thrust_and_coast_arcs.py
emtg/PyEMTG/HighFidelity/: HighFidelityFlybyIn.py  HighFidelityHalfFlyby.py  HighFidelityJourney.py  HighFidelityLaunch.py  HighFidelityToPatchedConic.py  HighFidelityTrajectory.py
emtg/PyEMTG/JourneyOptionsPanel/: ArrivalElementsPanel.py  DepartureElementsPanel.py  JourneyOptionsPanel.py  JourneyStagingPanel.py  OrbitElementsPanel.py  ProbeArrivalElementsPanelToAEI.py  ProbeArrivalElementsPanelToEnd.py
emtg/PyEMTG/OptionsOverhaul/: JourneyOptions.py  MissionOptions.py  PyMissionOptions.h  journeyoptions.cpp  journeyoptions.h  make_EMTG_missionoptions_journeyoptions.py  make_PyMissionOptions.py  make_journeyoptions_header.py  make_journeyoptions_python.py  make_journeyoptions_source.py  make_missionoptions_header.py  make_missionoptions_python.py  make_missionoptions_source.py  missionoptions.cpp  optionValidator.py
emtg/PyEMTG/ReportGenerators/: DistanceToBodiesGenerator.py  EMTG_ephemeris_reader.py  TargetFileGenerator.py  make_many_bsps.py  print_ephemeris.py
emtg/src/: CMakeLists.txt
src/: CMakeLists.txt
src/Astrodynamics/: BodydeticConversions.cpp  BodydeticConversions.h  CMakeLists.txt  CentralBody.cpp  CentralBody.h  ExponentialAtmosphere.cpp  ExponentialAtmosphere.h  FBLT_EOM.cpp  FBLT_EOM.h  FBLT_acceleration_model.cpp  FBLT_acceleration_model.h  HarmonicGravityField.cpp  HarmonicGravityField.h  Metaverse.cpp  Metaverse.h  StateInTwoBodyRotatingFrame.h  atmosphere.cpp  atmosphere.h  body.cpp  body.h  bplane.cpp  bplane.h  engine_model.h  frame.cpp  frame.h  orbit_element_conversions.h  universe.cpp  universe.h
src/Core/: CMakeLists.txt  EMTG_defs.h  EMTG_enums.h  chinchilla.h  doubleType.h  journeyoptions.cpp  journeyoptions.h  missionoptions.cpp  missionoptions.h  problem.cpp  problem.h
src/Executable/: EMTG_v9.cpp
src/HardwareModels/: ChemicalPropulsionSystem.cpp  ChemicalPropulsionSystem.h  ElectricPropulsionSystem.cpp  ElectricPropulsionSystem.h  HardwareBase.h  LaunchVehicle.cpp  LaunchVehicle.h  LaunchVehicleOptions.cpp  LaunchVehicleOptions.h  LaunchVehicleOptionsFactory.cpp  LaunchVehicleOptionsFactory.h  PowerSystem.cpp  PowerSystem.h  PowerSystemOptions.cpp  PowerSystemOptions.h  PropulsionSystem.h  PropulsionSystemOptions.cpp  PropulsionSystemOptions.h  Spacecraft.cpp  Spacecraft.h  SpacecraftOptions.cpp  SpacecraftOptions.h  SpacecraftOptionsFactory.cpp  SpacecraftOptionsFactory.h  Stage.cpp  Stage.h  StageOptions.cpp  StageOptions.h  ThrottleSetting.cpp  ThrottleSetting.h  ThrottleTable.cpp  ThrottleTable.h
src/InnerLoop/: EMTG_WORHP_interface.cpp  EMTG_WORHP_interface.h  EMTG_innerloop_solution.cpp  EMTG_innerloop_solution.h  FilamentWalker.cpp  FilamentWalker.h  NLP_interface.cpp  NLP_interface.h  NLPoptions.cpp  NLPoptions.h  SNOPT_interface.cpp  SNOPT_interface.h  monotonic_basin_hopping.cpp  monotonic_basin_hopping.h  snoptProblemExtension.h
src/Integration/: ExplicitRungeKutta.cpp  ExplicitRungeKutta.h  Integrand.cpp  Integrand.h  IntegrationCoefficients.cpp  IntegrationCoefficients.h  IntegrationScheme.cpp  IntegrationScheme.h  IntegrationSchemeFactory.cpp  IntegrationSchemeFactory.h  RungeKutta4Tableau.cpp  RungeKutta4Tableau.h  RungeKutta8.cpp  RungeKuttaDP87Tableau.cpp  RungeKuttaDP87Tableau.h  RungeKuttaTableau.cpp  RungeKuttaTableau.h
src/Math/: CMakeLists.txt  EMTG_Matrix.cpp  EMTG_Matrix.h  EMTG_Tensor.cpp  EMTG_Tensor.h  EMTG_math.h  interpolator.cpp  interpolator.h
src/Mission/: mission.cpp  mission.h
src/Propagation/: IntegratedAdaptiveStepPropagator.cpp  IntegratedAdaptiveStepPropagator.h  IntegratedFixedStepPropagator.cpp  IntegratedFixedStepPropagator.h  IntegratedPropagator.cpp  IntegratedPropagator.h  KeplerPropagator.cpp  KeplerPropagator.h  KeplerPropagatorTimeDomain.cpp  KeplerPropagatorTimeDomain.h  PropagatorBase.cpp  PropagatorBase.h  PropagatorFactory.cpp  PropagatorFactory.h
src/Propulator/: Propulator.cpp  Propulator.h  PropulatorDriver.cpp  PropulatorJourney.cpp  PropulatorJourney.h
src/Python/: CMakeLists.txt  PyHardware.cpp
src/Scalatron/: ScalatronBase.cpp  ScalatronBase.h  ScalatronFactory.cpp  ScalatronFactory.h  ScalatronPJRN.cpp  ScalatronPJRN.h
src/SplineEphem/: SplineEphem_body.cpp  SplineEphem_body.h  SplineEphem_universe.cpp  SplineEphem_universe.h
src/Utilities/: CMakeLists.txt  EMTG_solver_utilities.cpp  EMTG_solver_utilities.h  EMTG_string_utilities.cpp  EMTG_string_utilities.h  EMTG_time_utilities.cpp  EMTG_time_utilities.h  covariance_reader.cpp  covariance_reader.h  ephemeris_reader.cpp  ephemeris_reader.h  file_utilities.cpp  file_utilities.h  maneuver_spec_item.h  mjd_to_mdyhms.cpp  mjd_to_mdyhms.h  sparsey_thing.cpp  sparsey_thing.h  target_spec_line.cpp  writey_thing.cpp  writey_thing.h
(+2850 files in other folders)
